data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3776.wast
;; 5. **Test Description**: Create a scenario where `br_table` targets overlap with valid indices but lead to an out-of-bounds index in certain execution orderings. Check the engines' robustness in consistent error detection.    - **Specific Constraint**: Validate proper handling of varying target indices within `br_table`.    - **Relation to `call`**: Testing the robustness of call error handling in different execution paths and orders.

(assert_invalid
  (module
    (func $multi_branching (param i32)
      (block 
        (block
          (br_table 0 1 (local.get 0)) 
        )
        (call 1)
      )
    )
    (func (param i32))
  )
  "type mismatch"
)